--- a/grid_file.css
+++ b/grid_file.css
@@ -1,10 +1,23 @@
 body{
     font-family: 'Roboto',Arial;
-
+    margin: 0;
 }
 .container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     row-gap: 30px;
     column-gap: 10px;
+}
+.header{
+    display: flex;
+    flex-direction: row;
+}
+.left-section{
+    background-color: aqua;
+}
+.middle-section{
+    background-color: pink;
+}
+.right-section{
+    background-color: aqua;
 }
