--- a/youtube/header.css
+++ b/youtube/header.css
@@ -11,6 +11,7 @@
     border-bottom-width:1px ;
     border-bottom-style:solid ;
     border-bottom-color:rgb(233, 219, 219) ;
+    z-index: 100;
 }
 .left-section{
     width: 160px;
