--- a/youtube/grid_file.css
+++ b/youtube/grid_file.css
@@ -1,8 +1,9 @@
 body{
     font-family: 'Roboto',Arial;
     margin: 0;
-    padding-top: 70px;
+    padding-top: 80px;
     padding-left: 80px;
+    background-color:rgb(248, 248, 248) ;
 }
 .container{
     display: grid;
