--- a/youtube/grid_file.css
+++ b/youtube/grid_file.css
@@ -10,4 +10,15 @@ body{
     grid-template-columns: 1fr 1fr 1fr 1fr;
     row-gap: 30px;
     column-gap: 1px;
+    margin-bottom: 40px
+}
+@media(max-width:750px){
+    .container{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media(max-width:751px)and(max-width:999px){
+    .container{
+        grid-template-columns: 1fr 1fr;
+    }
 }
