--- a/youtube/thumbnail.css
+++ b/youtube/thumbnail.css
@@ -46,17 +46,7 @@
     padding-bottom: 4px;
     border-radius: 2px;
 }
-.video-time-1{
-    position: absolute;
-    background-color: black;
-    color: rgb(255, 255, 255);
-    bottom: 21px;
-    right: 5px;
-    font-family: 'Roboto',Arial;
-    font-size: 12px;
-    padding-left: 4px;
-    padding-right: 4px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    border-radius: 2px;
+.link{
+    text-decoration: none;
+    color: rgb(0, 0, 0);
 }
